--- a/pweb_eCarSharing/Content/Site.css
+++ b/pweb_eCarSharing/Content/Site.css
@@ -1,5 +1,4 @@
 ﻿body {
-    padding-top: 50px;
     padding-bottom: 20px;
 }
 
@@ -21,4 +20,8 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.navbar {
+    margin-bottom: 20px;
 }
