--- a/pweb_eCarSharing/Views/eCarSharing/Main.cshtml
+++ b/pweb_eCarSharing/Views/eCarSharing/Main.cshtml
@@ -1,1 +1,27 @@
-﻿Main page
+﻿<div style="display:grid; grid-template-rows: 1fr 1fr 1fr; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; height: 120%;">
+    <div style="grid-column: 1 / span 5; grid-row: 1; text-align: center; padding: 20px 0;">
+        <label style="font-weight: bold; font-size: 20px;">Welcome to eCarSharing:</label>
+        <p style="font-size: 16px;">
+            eCarSharing is a service available to all qualified vehicle owners or wannabe vehicle renters in a community, which aids and facilitates vehicle rental.
+            We allow you, as an owner, to have your vehicles available for rental, wether they are a car or a bike or even a scooter or motorbike.
+            No written agreement is required to make use of our platform, you just have to register in our registration section and you can go from there.
+
+        </p>
+    </div>
+    <div style="grid-column: 1 / 5; grid-row: 2; text-align: center; padding: 20px 0;">
+        <label style="font-weight: bold; font-size: 20px;">Why rent with eCarSharing?</label>
+        <p style="font-size: 16px;">
+            These days it is important to go green and try to be as eco-friendly as possible: This is where eCarSharing comes in!
+            We allow you to rent available vehicles from trusted suppliers that are either hybrid, electric or even zero emission vehicles, such as bikes!
+            We also have ethical certification, so we guarantee no seals or children are harmed with each rental we do. Really, we promise!
+        </p>
+    </div>
+    <div style="grid-column: 2 / span 4; grid-row: 3; text-align: center; padding: 20px 0;">
+        <label style="font-weight: bold; font-size: 20px;">This sounds amazing, how can I start?</label>
+        <p style="font-size: 16px;">
+            We have made it as easy as we could, for your convenience.
+            To start, simply register to our platform (check the 'Register' section in the menu) and check the available vehicles list.
+            As to make sure you really enjoy the eCarSharing experience, the first rental is on us: Go on, try it out!
+        </p>
+    </div>
+</div>
