--- a/pweb_eCarSharing/Views/eCarSharing/Main.cshtml
+++ b/pweb_eCarSharing/Views/eCarSharing/Main.cshtml
@@ -1,5 +1,5 @@
-﻿<div style="display:grid; grid-template-rows: 1fr 1fr 1fr; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; height: 120%;">
-    <div style="grid-column: 1 / span 5; grid-row: 1; text-align: center; padding: 20px 0;">
+﻿<div style="display:grid; grid-template-rows: 40% 60%; grid-template-columns: 1fr 1fr; grid-column-gap: 20px; grid-row-gap: 20px;">
+    <div class="jumbotron" style="grid-column: 1 / span 2; grid-row: 1; text-align: center; padding: 25px 25px; margin: 0;">
         <label style="font-weight: bold; font-size: 20px;">Welcome to eCarSharing:</label>
         <p style="font-size: 16px;">
             eCarSharing is a service available to all qualified vehicle owners or wannabe vehicle renters in a community, which aids and facilitates vehicle rental.
@@ -8,7 +8,7 @@
 
         </p>
     </div>
-    <div style="grid-column: 1 / 5; grid-row: 2; text-align: center; padding: 20px 0;">
+    <div class="jumbotron" style="grid-column: 1; grid-row: 2; text-align: center; padding: 25px 25px; margin: 0;">
         <label style="font-weight: bold; font-size: 20px;">Why rent with eCarSharing?</label>
         <p style="font-size: 16px;">
             These days it is important to go green and try to be as eco-friendly as possible: This is where eCarSharing comes in!
@@ -16,7 +16,7 @@
             We also have ethical certification, so we guarantee no seals or children are harmed with each rental we do. Really, we promise!
         </p>
     </div>
-    <div style="grid-column: 2 / span 4; grid-row: 3; text-align: center; padding: 20px 0;">
+    <div class="jumbotron" style="grid-column: 2; grid-row: 2; text-align: center; padding: 25px 25px; margin: 0;">
         <label style="font-weight: bold; font-size: 20px;">This sounds amazing, how can I start?</label>
         <p style="font-size: 16px;">
             We have made it as easy as we could, for your convenience.
