--- a/pweb_eCarSharing/Views/Shared/_Layout.cshtml
+++ b/pweb_eCarSharing/Views/Shared/_Layout.cshtml
@@ -24,12 +24,12 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <ul style="padding: 0">
                                     <li class="dropdown-item">@Html.ActionLink("Home", "Main", "eCarSharing")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Station List", "CarStationList", "eCarSharing")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Vehicle List", "VehicleList", "eCarSharing")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Rental Create", "RentVehicle", "eCarSharing")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Rental List", "ListRentalData", "eCarSharing")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Rental Edit", "ChangeRentalData", "eCarSharing")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Statistics", "UsageStats", "eCarSharing")</li>
+                                    <li class="dropdown-item">@Html.ActionLink("Station List", "CarStationList", "CarStation")</li>
+                                    <li class="dropdown-item">@Html.ActionLink("Vehicle List", "VehicleList", "Vehicle")</li>
+                                    <li class="dropdown-item">@Html.ActionLink("Rental Create", "RentVehicle", "Reservation")</li>
+                                    <li class="dropdown-item">@Html.ActionLink("Rental List", "ListRentalData", "Reservation")</li>
+                                    <li class="dropdown-item">@Html.ActionLink("Rental Edit", "ChangeRentalData", "Reservation")</li>
+                                    <li class="dropdown-item">@Html.ActionLink("Statistics", "UsageStats", "Reservation")</li>
                                     @if (User.IsInRole("Admin"))
                                     {
                                         <li class="dropdown-item">@Html.ActionLink("Contact", "Contact", "Home")</li>
