new rental form working

--- a/pweb_eCarSharing/Views/Reservation/ListRentalData.cshtml
+++ b/pweb_eCarSharing/Views/Reservation/ListRentalData.cshtml
@@ -9,7 +9,7 @@
             @Html.DisplayNameFor(model => model.startCarStation.stationCity)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.User.name)
+            @Html.DisplayNameFor(model => model.UserNIB.userNIBID)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Vehicle.vehicleType)
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.startCarStation.stationCity)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.User.name)
+            @Html.DisplayFor(modelItem => item.UserNIB.userNIBID)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Vehicle.vehicleType)
