--- a/pweb_eCarSharing/Views/Shared/_Layout.cshtml
+++ b/pweb_eCarSharing/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                                     <li class="dropdown-item">@Html.ActionLink("Available Vehicles", "AvailableVehicleList", "Vehicle")</li>
                                     <li class="dropdown-item">@Html.ActionLink("Vehicles In Use", "InUseVehicleList", "Vehicle")</li>
                                     <li class="dropdown-item">@Html.ActionLink("Vehicles Create", "AddVehicle", "Vehicle")</li>
+                                    <li class="dropdown-item">@Html.ActionLink("Vehicles Change", "ChangeVehicleData", "Vehicle")</li>
                                     <li class="dropdown-item">@Html.ActionLink("Rental Create", "RentVehicle", "Reservation")</li>
                                     <li class="dropdown-item">@Html.ActionLink("Rental List", "ListRentalData", "Reservation")</li>
                                     <li class="dropdown-item">@Html.ActionLink("Rental Edit", "ChangeRentalData", "Reservation")</li>
