Design change, changed menus styles and overall project layout

--- a/pweb_eCarSharing/Views/Shared/_Layout.cshtml
+++ b/pweb_eCarSharing/Views/Shared/_Layout.cshtml
@@ -12,40 +12,28 @@
     <div class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             @Html.ActionLink("eCarSharing", "Main", "eCarSharing", new { area = "" }, new { @class = "navbar-brand" })
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Actions
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <ul style="padding: 0">
-                                    <li class="dropdown-item">@Html.ActionLink("Home", "Main", "eCarSharing")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Station List", "CarStationList", "CarStation")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Station Create", "AddCarStation", "CarStation")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Available Vehicles", "AvailableVehicleList", "Vehicle")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Vehicles In Use", "InUseVehicleList", "Vehicle")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Vehicles Create", "AddVehicle", "Vehicle")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Vehicles Change", "ChangeVehicleData", "Vehicle")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Rental Create", "RentVehicle", "Reservation")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Rental List", "ListRentalData", "Reservation")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Rental Edit", "ChangeRentalData", "Reservation")</li>
-                                    <li class="dropdown-item">@Html.ActionLink("Statistics", "UsageStats", "Reservation")</li>
-                                    @if (User.IsInRole("Admin"))
-                                    {
-                                        <li class="dropdown-item">@Html.ActionLink("", "", "")</li>
-                                    }
-
-                                </ul>
-                                @Html.Partial("_LoginPartial")
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <span style="padding-left: 30px">@Html.ActionLink("Vehicles", "Vehicle", "eCarSharing")</span>
+                <span style="padding-left: 30px">@Html.ActionLink("Car Stations", "CarStation", "eCarSharing")</span>
+                <span style="padding-left: 30px">@Html.ActionLink("Reservations", "Reservation", "eCarSharing")</span>
             </div>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Session
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            
+                            @Html.Partial("_LoginPartial")
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     
     <div class="container body-content">
