Added removers for all entity types

--- a/pweb_eCarSharing/Views/eCarSharing/CarStation.cshtml
+++ b/pweb_eCarSharing/Views/eCarSharing/CarStation.cshtml
@@ -9,4 +9,9 @@
         @Html.ActionLink("Add New Car Station", "AddCarStation", "CarStation")
 
     </div>
+    <div class="jumbotron" style="grid-column: 2; grid-row: 3; text-align: center; padding: 25px 25px; margin: 0;">
+
+        @Html.ActionLink("Remove Car Station", "RemCarStation", "CarStation")
+
+    </div>
 </div>
