--- a/pweb_eCarSharing/Views/Reservation/ChangeRentalData.cshtml
+++ b/pweb_eCarSharing/Views/Reservation/ChangeRentalData.cshtml
@@ -1,43 +1,32 @@
-﻿@model pweb_eCarSharing.Models.Reservation
+﻿@model pweb_eCarSharing.Models.EditReservationViewModel
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Reservation</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ReservationID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UserID, "UserID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ReservationID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("UserID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ReservationID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ReservationID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.VehicleID, "VehicleID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.VehicleID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("VehicleID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.VehicleID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.VehicleID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.idStationIdstart, "idStationIdstart", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.idStationIdEnd, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("idStationIdstart", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.idStationIdstart, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.idStationIdEnd, "idStationIdEnd", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("idStationIdEnd", null, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.idStationIdEnd, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.idStationIdEnd, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -47,14 +36,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.predictedUseTime, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.predictedUseTime, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.predictedCost, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.predictedCost, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.predictedCost, "", new { @class = "text-danger" })
             </div>
         </div>
 
