--- a/pweb_eCarSharing/Views/eCarSharing/Reservation.cshtml
+++ b/pweb_eCarSharing/Views/eCarSharing/Reservation.cshtml
@@ -1,4 +1,4 @@
-﻿<div style="display:grid; grid-template-rows: 1fr 1fr 1fr 1fr; grid-template-columns: 1fr 1fr 1fr; grid-column-gap: 20px; grid-row-gap: 20px;">
+﻿<div style="display:grid; grid-template-rows: 1fr 1fr 1fr 1fr 1fr; grid-template-columns: 1fr 1fr 1fr; grid-column-gap: 20px; grid-row-gap: 20px;">
     <div class="jumbotron" style="grid-column: 2; grid-row: 1; text-align: center; padding: 25px 25px; margin: 0;">
 
         @Html.ActionLink("Rental Requests List", "ListRentalData", "Reservation")
@@ -15,6 +15,11 @@
 
     </div>
     <div class="jumbotron" style="grid-column: 2; grid-row: 4; text-align: center; padding: 25px 25px; margin: 0;">
+
+        @Html.ActionLink("Remove Request", "RemRentalData", "Reservation")
+
+    </div>
+    <div class="jumbotron" style="grid-column: 2; grid-row: 5; text-align: center; padding: 25px 25px; margin: 0;">
 
         @Html.ActionLink("Usage Statistics", "UsageStats", "Reservation")
 
