Major changes. -looked at all the views and changed them 1 by 1 to have correct titles and displays -manual registration now fills the UserNIBs table as well  -bug at localhost:44366/eCarStation/Setup throws nullreferenceexception

--- a/pweb_eCarSharing/Views/CarStation/CarStationList.cshtml
+++ b/pweb_eCarSharing/Views/CarStation/CarStationList.cshtml
@@ -1,25 +1,31 @@
 ﻿@model IEnumerable<pweb_eCarSharing.Models.CarStation>
 
 <table class="table">
+    <h2>Car Station List</h2>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.stationCity)
+            <label>Station Id</label>
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.stationAdress)
+            <label>Station Adress</label>
         </th>
-        <th></th>
+        <th>
+            <label>Station City</label>
+        </th>
     </tr>
 
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.stationCity)
+            @Html.DisplayFor(modelItem => item.stationId)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.stationAdress)
         </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.stationCity)
+        </td>
     </tr>
-}
+    }
 
 </table>
