--- a/pweb_eCarSharing/Views/Home/Index.cshtml
+++ b/pweb_eCarSharing/Views/Home/Index.cshtml
@@ -1,31 +1,38 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+﻿<div style="display:grid; grid-template-rows: 40% 60%; grid-template-columns: 1fr 1fr; grid-column-gap: 20px; grid-row-gap: 20px;">
+    <div class="jumbotron" style="grid-column: 1 / span 2; grid-row: 1; text-align: center; padding: 25px 25px; margin: 0;">
+        <label style="font-weight: bold; font-size: 20px;">Welcome to eCarSharing:</label>
+        <p style="font-size: 16px;">
+            'eCarSharing' is a service available to all qualified vehicle owners or wannabe vehicle renters in a community, which aids and facilitates vehicle rental.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p style="font-size: 16px;">
+            We allow you, as a vehicle owner, to have your possessions available for rental, wether they are a car, a motorbike, a bike or even an electric scooter.
+            No written agreement is required to make use of our platform, you just have to register to our platform and you can go from there.
+        </p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="jumbotron" style="grid-column: 1; grid-row: 2; text-align: center; padding: 25px 25px; margin: 0;">
+        <label style="font-weight: bold; font-size: 20px;">Why rent with eCarSharing?</label>
+        <p style="font-size: 16px;">
+            These days it is important to go green and try to be as eco-friendly as possible: This is where eCarSharing comes in!
+        </p>
+        <p style="font-size: 16px;">
+            We allow you to rent available vehicles from trusted suppliers that are either hybrid, electric or even zero emission vehicles, such as bikes!
+        </p>
+        <p style="font-size: 16px;">
+            We also have ethical certification, so we guarantee no seals or children are harmed with each rental we do. Really, we promise!
+        </p>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="jumbotron" style="grid-column: 2; grid-row: 2; text-align: center; padding: 25px 25px; margin: 0;">
+        <label style="font-weight: bold; font-size: 20px;">This sounds amazing, how can I start?</label>
+        <p style="font-size: 16px;">
+            We have made it as easy as we could, for your convenience.
+            To start, simply register to our platform (check the 'Register' section in the 'Session' menu).
+        </p>
+        <p style="font-size: 16px;">
+            After that you can simply check the available vehicles list, at the 'Vehicles' section in the navbar menu.
+        </p>
+        <p style="font-size: 16px;">
+            As to make sure you really enjoy the eCarSharing experience, the first rental is on us: Go on, try it out!
+        </p>
     </div>
 </div>
+<hr />
