--- a/pweb_eCarSharing/Views/eCarSharing/Main.cshtml
+++ b/pweb_eCarSharing/Views/eCarSharing/Main.cshtml
@@ -2,17 +2,22 @@
     <div class="jumbotron" style="grid-column: 1 / span 2; grid-row: 1; text-align: center; padding: 25px 25px; margin: 0;">
         <label style="font-weight: bold; font-size: 20px;">Welcome to eCarSharing:</label>
         <p style="font-size: 16px;">
-            eCarSharing is a service available to all qualified vehicle owners or wannabe vehicle renters in a community, which aids and facilitates vehicle rental.
-            We allow you, as an owner, to have your vehicles available for rental, wether they are a car or a bike or even a scooter or motorbike.
-            No written agreement is required to make use of our platform, you just have to register in our registration section and you can go from there.
-
+            'eCarSharing' is a service available to all qualified vehicle owners or wannabe vehicle renters in a community, which aids and facilitates vehicle rental.
+        </p>
+        <p style="font-size: 16px;">
+            We allow you, as a vehicle owner, to have your possessions available for rental, wether they are a car, a motorbike, a bike or even an electric scooter.
+            No written agreement is required to make use of our platform, you just have to register to our platform and you can go from there.
         </p>
     </div>
     <div class="jumbotron" style="grid-column: 1; grid-row: 2; text-align: center; padding: 25px 25px; margin: 0;">
         <label style="font-weight: bold; font-size: 20px;">Why rent with eCarSharing?</label>
         <p style="font-size: 16px;">
             These days it is important to go green and try to be as eco-friendly as possible: This is where eCarSharing comes in!
+        </p>
+        <p style="font-size: 16px;">
             We allow you to rent available vehicles from trusted suppliers that are either hybrid, electric or even zero emission vehicles, such as bikes!
+        </p>
+        <p style="font-size: 16px;">
             We also have ethical certification, so we guarantee no seals or children are harmed with each rental we do. Really, we promise!
         </p>
     </div>
@@ -20,8 +25,14 @@
         <label style="font-weight: bold; font-size: 20px;">This sounds amazing, how can I start?</label>
         <p style="font-size: 16px;">
             We have made it as easy as we could, for your convenience.
-            To start, simply register to our platform (check the 'Register' section in the menu) and check the available vehicles list.
+            To start, simply register to our platform (check the 'Register' section in the 'Session' menu).
+        </p>
+        <p style="font-size: 16px;">
+            After that you can simply check the available vehicles list, at the 'Vehicles' section in the navbar menu.
+        </p>
+        <p style="font-size: 16px;">
             As to make sure you really enjoy the eCarSharing experience, the first rental is on us: Go on, try it out!
         </p>
     </div>
 </div>
+<hr />
