--- a/pweb_eCarSharing/Views/CarStation/AddCarStation.cshtml
+++ b/pweb_eCarSharing/Views/CarStation/AddCarStation.cshtml
@@ -5,10 +5,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h2>Add a new Car Station</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.stationCity, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>In what city is the station?</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.stationCity, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.stationCity, "", new { @class = "text-danger" })
@@ -16,7 +17,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.stationAdress, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>The Adress where it is at:</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.stationAdress, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.stationAdress, "", new { @class = "text-danger" })
@@ -25,12 +26,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Add Station" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "CarStationList")
 </div>
