--- a/pweb_eCarSharing/Views/CarStation/RemCarStation.cshtml
+++ b/pweb_eCarSharing/Views/CarStation/RemCarStation.cshtml
@@ -5,10 +5,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h2>Remove Car Station by ID</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.stationID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>The id of the Station to remove:</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.stationID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.stationID, "", new { @class = "text-danger" })
@@ -17,12 +18,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Delete" class="btn btn-default" />
+                <input type="submit" value="Delete Station" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "CarStationList")
 </div>
