--- a/pweb_eCarSharing/Views/Reservation/ChangeRentalData.cshtml
+++ b/pweb_eCarSharing/Views/Reservation/ChangeRentalData.cshtml
@@ -5,10 +5,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h2>Change Rental Request Details</h2>
         <hr />
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ReservationID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>Target Request Id:</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ReservationID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ReservationID, "", new { @class = "text-danger" })
@@ -16,7 +17,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.VehicleID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>Vehicle's ID number:</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.VehicleID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.VehicleID, "", new { @class = "text-danger" })
@@ -24,7 +25,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.idStationIdEnd, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>Delivery Station ID:</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.idStationIdEnd, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.idStationIdEnd, "", new { @class = "text-danger" })
@@ -32,7 +33,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.predictedUseTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>Total use time (minutes):</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.predictedUseTime, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.predictedUseTime, "", new { @class = "text-danger" })
@@ -41,12 +42,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save Details" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "ListRentalData")
 </div>
