--- a/pweb_eCarSharing/Views/Reservation/RemRentalData.cshtml
+++ b/pweb_eCarSharing/Views/Reservation/RemRentalData.cshtml
@@ -5,10 +5,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h2>Remove Reservation by ID</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.reservationID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>ID of the reservation to remove:</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.reservationID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.reservationID, "", new { @class = "text-danger" })
@@ -24,5 +25,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "ListRentalData")
 </div>
