--- a/pweb_eCarSharing/Views/Vehicle/AddVehicle.cshtml
+++ b/pweb_eCarSharing/Views/Vehicle/AddVehicle.cshtml
@@ -5,10 +5,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h2>Add New Vehicle:</h2>
         <hr />
 
         <div class="form-group">
-            @Html.LabelFor(model => model.currentStationId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>Vehicle's current station ID number</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.currentStationId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.currentStationId, "", new { @class = "text-danger" })
@@ -16,7 +17,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.vehicleType, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>Vehicle Type (SCOOTER/BIKE/MOTORBIKE/FOURWHEELED)</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.vehicleType, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.vehicleType, "", new { @class = "text-danger" })
@@ -24,27 +25,23 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.isSmallSized, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.isSmallSized)
-                    @Html.ValidationMessageFor(model => model.isSmallSized, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            <label>
+                Is the Vehicle small?  ->
+                @Html.EditorFor(model => model.isSmallSized)
+                @Html.ValidationMessageFor(model => model.isSmallSized, "", new { @class = "text-danger" })
+            </label>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.isForTourism, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.isForTourism)
-                    @Html.ValidationMessageFor(model => model.isForTourism, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            <label>
+                Is it destined for tourism?  ->
+                @Html.EditorFor(model => model.isForTourism)
+                @Html.ValidationMessageFor(model => model.isForTourism, "", new { @class = "text-danger" })
+            </label>            
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.pricePerMinute, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>Rental price per minute?</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.pricePerMinute, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.pricePerMinute, "", new { @class = "text-danger" })
@@ -52,7 +49,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.remainingBattery, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>The vehicle's current battery percentage:</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.remainingBattery, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.remainingBattery, "", new { @class = "text-danger" })
@@ -61,12 +58,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Add Vehicle" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "AvailableVehicleList")
 </div>
