--- a/pweb_eCarSharing/Views/Vehicle/RemVehicle.cshtml
+++ b/pweb_eCarSharing/Views/Vehicle/RemVehicle.cshtml
@@ -5,11 +5,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RemVehicleViewModel</h4>
+        <h4>Remove Vehicle by ID</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.vehicleID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label>Id of the vehicle to remove:</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.vehicleID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.vehicleID, "", new { @class = "text-danger" })
@@ -18,12 +18,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Delete" class="btn btn-default" />
+                <input type="submit" value="Remove Vehicle" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "AvailableVehicleList")
 </div>
