--- a/pweb_eCarSharing/Views/Account/Register.cshtml
+++ b/pweb_eCarSharing/Views/Account/Register.cshtml
@@ -12,32 +12,38 @@
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        <label>E-Mail Adress:</label>
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        <label>Password:</label>
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        <label>Repeat Password please:</label>
         <div class="col-md-10">
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(m => m.NIB, new { @class = "col-md-2 control-label" })
+        <label>Your NIB for financial purposes:</label>
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.NIB, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
+        <label>Your role in the platform (Admin/Regular):</label>
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Role, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input type="submit" class="btn btn-default" value="Register New Account" />
         </div>
     </div>
 }
