--- a/pweb_eCarSharing/Views/eCarSharing/CarStation.cshtml
+++ b/pweb_eCarSharing/Views/eCarSharing/CarStation.cshtml
@@ -1,17 +1,30 @@
-﻿<div style="display:grid; grid-template-rows: 1fr 1fr; grid-template-columns: 1fr 1fr 1fr; grid-column-gap: 20px; grid-row-gap: 20px;">
-    <div class="jumbotron" style="grid-column: 2; grid-row: 1; text-align: center; padding: 25px 25px; margin: 0;">
+﻿@if (ViewBag.Role.Equals("Regular"))
+{
+    <div style="display:grid; grid-template-rows: 1fr; grid-template-columns: 1fr 1fr 1fr; grid-column-gap: 20px; grid-row-gap: 20px;">
+        <div class="jumbotron" style="grid-column: 2; grid-row: 1; text-align: center; padding: 25px 25px; margin: 0;">
 
-        @Html.ActionLink("Existing Car Stations List", "CarStationList", "CarStation")
+            @Html.ActionLink("Existing Car Stations List", "CarStationList", "CarStation")
 
+        </div>
     </div>
-    <div class="jumbotron" style="grid-column: 2; grid-row: 2; text-align: center; padding: 25px 25px; margin: 0;">
+}
+@if (ViewBag.Role.Equals("Admin"))
+{
+    <div style="display:grid; grid-template-rows: 1fr 1fr 1fr; grid-template-columns: 1fr 1fr 1fr; grid-column-gap: 20px; grid-row-gap: 20px;">
+        <div class="jumbotron" style="grid-column: 2; grid-row: 1; text-align: center; padding: 25px 25px; margin: 0;">
 
-        @Html.ActionLink("Add New Car Station", "AddCarStation", "CarStation")
+            @Html.ActionLink("Existing Car Stations List", "CarStationList", "CarStation")
 
+        </div>
+        <div class="jumbotron" style="grid-column: 2; grid-row: 2; text-align: center; padding: 25px 25px; margin: 0;">
+
+            @Html.ActionLink("Add New Car Station", "AddCarStation", "CarStation")
+
+        </div>
+        <div class="jumbotron" style="grid-column: 2; grid-row: 3; text-align: center; padding: 25px 25px; margin: 0;">
+
+            @Html.ActionLink("Remove Car Station", "RemCarStation", "CarStation")
+
+        </div>
     </div>
-    <div class="jumbotron" style="grid-column: 2; grid-row: 3; text-align: center; padding: 25px 25px; margin: 0;">
-
-        @Html.ActionLink("Remove Car Station", "RemCarStation", "CarStation")
-
-    </div>
-</div>
+}
